<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dotabuff.DotabuffActivity"
>

    <TextView
            android:id="@+id/tvFindHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btFindHistory"
            android:text="@string/tv_find_history"
            style="@style/AppTheme.TextViewDotabuff"
    />
    <EditText
            android:id="@+id/etFindHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvFindHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AppTheme.EditTextDotabuff"
    />
    <Button
            android:id="@+id/btFindHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etFindHistory"
            app:layout_constraintStart_toEndOf="@+id/tvFindHistory"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/bt_go"
            style="@style/AppTheme.ButtonDotabuff"
    />
    <TextView
            android:id="@+id/tvFindMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btFindHistory"
            app:layout_constraintBottom_toTopOf="@+id/btFindMatch"
            android:text="@string/tv_find_match"
            style="@style/AppTheme.TextViewDotabuff"
    />
    <EditText
            android:id="@+id/etFindMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btFindHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFindMatch"
            style="@style/AppTheme.EditTextDotabuff"
    />
    <Button
            android:id="@+id/btFindMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etFindMatch"
            app:layout_constraintStart_toEndOf="@+id/tvFindMatch"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/bt_go"
            style="@style/AppTheme.ButtonDotabuff"
    />
    <TextView
            android:id="@+id/tvFindPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btFindMatch"
            app:layout_constraintBottom_toTopOf="@+id/btFindPlayer"
            android:text="@string/tv_find_player"
            style="@style/AppTheme.TextViewDotabuff"
    />
    <EditText
            android:id="@+id/etFindPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btFindMatch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFindPlayer"
            style="@style/AppTheme.EditTextDotabuff"
    />
    <Button
            android:id="@+id/btFindPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etFindPlayer"
            app:layout_constraintStart_toEndOf="@+id/tvFindPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/bt_go"
            style="@style/AppTheme.ButtonDotabuff"
    />

</androidx.constraintlayout.widget.ConstraintLayout>