<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/heroConstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.heroConstructor.ctor.HeroConstructorActivity"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_default"
            android:layout_marginTop="@dimen/spacing_default"
            android:layout_marginRight="@dimen/spacing_default"
    >

        <ImageView
                android:id="@+id/ivHero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/axe"
        />

        <TextView
                android:id="@+id/tvLvl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/ivHero"
                app:layout_constraintTop_toBottomOf="@+id/ivHero"
                android:text="@string/tv_hero_lvl"
                style="@style/AppTheme.TextViewHeroName"
        />

        <TextView
                android:id="@+id/tvHp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/tvLvl"
                app:layout_constraintTop_toBottomOf="@+id/tvLvl"
                android:text="@string/tv_hp"
                style="@style/AppTheme.TextViewHp"
        />

        <TextView
                android:id="@+id/tvMp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/tvHp"
                app:layout_constraintRight_toRightOf="@+id/tvLvl"
                app:layout_constraintTop_toBottomOf="@+id/tvHp"
                android:text="@string/tv_mp"
                style="@style/AppTheme.TextViewMp"
        />

        <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:columnCount="2"
                android:rowCount="9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivHero"
        >

            <ImageView
                    android:id="@+id/ivStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    app:srcCompat="@drawable/strength"
            />

            <ImageView
                    android:id="@+id/ivAgility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    app:srcCompat="@drawable/agility"
            />

            <ImageView
                    android:id="@+id/ivIntelligence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="6"
                    android:layout_column="0"
                    app:srcCompat="@drawable/intelligence"
            />

            <TextView
                    android:id="@+id/tvStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:text="@string/tv_double"
            />

            <TextView
                    android:id="@+id/tvAgility"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="5"
                    android:layout_column="1"
                    android:text="@string/tv_double"
            />

            <TextView
                    android:id="@+id/tvIntelligence"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="6"
                    android:layout_column="1"
                    android:text="@string/tv_double"
            />

            <TextView
                    android:id="@+id/tvAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/tv_double"
            />

            <TextView
                    android:id="@+id/tvArmor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/tv_double"
            />

            <TextView
                    android:id="@+id/tvSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:text="@string/tv_double"
            />

            <ImageView
                    android:id="@+id/ivAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    app:srcCompat="@drawable/attack"
            />

            <ImageView
                    android:id="@+id/ivArmor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    app:srcCompat="@drawable/armor"
            />

            <ImageView
                    android:id="@+id/ivSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    app:srcCompat="@drawable/speed"
            />

        </GridLayout>

        <HorizontalScrollView
                android:id="@+id/scrollLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                app:layout_constraintBottom_toTopOf="@+id/btPlus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMp"
        >

            <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
            >

                <ImageButton
                        android:id="@+id/skill_one"
                        app:srcCompat="@drawable/skill_one"
                        style="@style/AppTheme.ImageButtonSkill"
                />

                <ImageButton
                        android:id="@+id/skill_two"
                        app:srcCompat="@drawable/skill_two"
                        style="@style/AppTheme.ImageButtonSkill"
                />

                <ImageButton
                        android:id="@+id/skill_three"
                        app:srcCompat="@drawable/skill_three"
                        style="@style/AppTheme.ImageButtonSkill"
                />

                <ImageButton
                        android:id="@+id/skill_four"
                        android:visibility="gone"
                        app:srcCompat="@drawable/empty_icon"
                        style="@style/AppTheme.ImageButtonSkill"
                />

                <ImageButton
                        android:id="@+id/skill_five"
                        android:visibility="gone"
                        app:srcCompat="@drawable/empty_icon"
                        style="@style/AppTheme.ImageButtonSkill"
                />

                <ImageButton
                        android:id="@+id/skill_six"
                        app:srcCompat="@drawable/skill_four"
                        style="@style/AppTheme.ImageButtonSkill"
                />

            </LinearLayout>

        </HorizontalScrollView>


        <Button
                android:id="@+id/btPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/btMinus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollLayout3"
                android:text="@string/bt_plus_lvl"
                style="@style/AppTheme.ButtonHeroConstructor"
        />

        <Button
                android:id="@+id/btMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/btMaximum"
                app:layout_constraintStart_toEndOf="@+id/btPlus"
                app:layout_constraintTop_toBottomOf="@+id/scrollLayout3"
                android:text="@string/bt_minus_lvl"
                style="@style/AppTheme.ButtonHeroConstructor"
        />

        <Button
                android:id="@+id/btMaximum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/btMinimum"
                app:layout_constraintStart_toEndOf="@+id/btMinus"
                app:layout_constraintTop_toBottomOf="@+id/scrollLayout3"
                android:text="@string/bt_max_lvl"
                style="@style/AppTheme.ButtonHeroConstructor"
        />

        <Button
                android:id="@+id/btMinimum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btMaximum"
                app:layout_constraintTop_toBottomOf="@+id/scrollLayout3"
                android:text="@string/bt_reset_lvl"
                style="@style/AppTheme.ButtonHeroConstructor"
        />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                app:layout_constraintLeft_toLeftOf="@+id/scrollLayout3"
                app:layout_constraintTop_toBottomOf="@+id/btPlus"
        >

            <TextView
                    android:id="@+id/tvSkillDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_medium"
                    android:textAlignment="center"
                    android:text="@string/tv_skill_name"
            >

            </TextView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>